--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lib"
   ],
   "scripts": {
-    "docs": "webdoc -R README.md"
+    "docs": "webdoc -R README.md",
+    "lint": "eslint lib/rmmz** lib/*.ts",
+    "lint:fix": "npm run lint --fix"
   },
   "types": "./lib/index.d.ts",
   "repository": {
@@ -23,13 +25,16 @@
   "dependencies": {
     "@types/pako": "^1.0.1",
     "pixi.js": "^5.3.0",
-    "typescript": "^4.0.2"
+    "typescript": "5.3.2"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
-    "@webdoc/cli": "^1.0.0",
-    "eslint": "^7.6.0",
-    "pixi-webdoc-template": "0.0.39-alpha.0"
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.13.1",
+    "@webdoc/cli": "^1.6.6",
+    "eslint": "8.55.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.0.1",
+    "pixi-webdoc-template": "0.0.39-alpha.0",
+    "prettier": "3.1.0"
   }
 }
